--- a/invert.html
+++ b/invert.html
@@ -122,6 +122,6 @@ RED.nodes.registerType('Equals',{
 	inputs: 1,
 	outputs: 1,
 	icon: 'equals.png',
-	label: 'Invert'
+	label: 'Equals'
 });
 </script>
